docs/v3.6.2/_sources/gallery/extras/index.rst.txt
:orphan:

.. _extras_index:

Extra Examples
==============

This gallery gathers additional examples of PyMieSim usage.  They illustrate more
specialised setups such as coupling efficiency heatmaps or system visualisation.

Contents
--------
- ``SphereProperties.py`` – compute optical properties for a range of sphere sizes.
- ``plot_coupling_heatmap.py`` – visualise coupling as a function of NA and refractive index.
- ``plot_system.py`` – draw the arrangement of sources, detectors and scatterers.
- ``plot_Qsca_vs_permittivity_vs_size_parameter.py`` – inspect scattering as material and size vary.
- ``array_scattering.py`` – compute fields and Stokes parameters for arbitrary angles.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Samples Properties">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_SphereProperties_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_SphereProperties.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Samples Properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute far fields, S1/S2 amplitudes and Stokes parameters using arbitrary phi and theta arrays.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_array_scattering_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_array_scattering.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Array-based scattering calculations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMieSim makes it easy to create a source and a scatterer. With these objects defined, it is possible to use PyMieSim to find the scattering efficiency of the scatterer. This feature can be used to plot a graph of the scattering efficiency of a sphere as a function of the permittivity and the size parameter.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_plot_Qsca_vs_permittivity_vs_size_parameter_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_plot_Qsca_vs_permittivity_vs_size_parameter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scattering efficiency of a sphere</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMieSim makes it easy to create a source and a scatterer. With these objects defined, it is possible to use PyMieSim to find the scattering efficiency of the scatterer. This feature can be used to plot a graph of the scattering efficiency of a sphere as a function of the permittivity and the size parameter.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_plot_coupling_heatmap_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_plot_coupling_heatmap.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Coupling heatmap of a sphere</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs numerical aperture">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_plot_coupling_vs_NA_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_plot_coupling_vs_NA.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs numerical aperture</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example Script: Using the plot_system Function">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_plot_system_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_plot_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot system</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/extras/SphereProperties
   /gallery/extras/array_scattering
   /gallery/extras/plot_Qsca_vs_permittivity_vs_size_parameter
   /gallery/extras/plot_coupling_heatmap
   /gallery/extras/plot_coupling_vs_NA
   /gallery/extras/plot_system



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
