docs/v3.8.4/_sources/gallery/extras/index.rst.txt
:orphan:

.. _extras_index:

Extra Examples
==============

This gallery gathers additional examples of PyMieSim usage.  They illustrate more
specialised setups such as coupling efficiency heatmaps or system visualisation.

Contents
--------
- ``SphereProperties.py`` – compute optical properties for a range of sphere sizes.
- ``plot_coupling_heatmap.py`` – visualise coupling as a function of NA and refractive index.
- ``plot_system.py`` – draw the arrangement of sources, detectors and scatterers.
- ``plot_Qsca_vs_permittivity_vs_size_parameter.py`` – inspect scattering as material and size vary.
- ``array_scattering.py`` – compute fields and Stokes parameters for arbitrary angles.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_HG01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_HG01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hermite-Gauss 01 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of HG31 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_HG11_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_HG11.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hermite-Gauss 31 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_LG11_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_LG11.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Laguerre-Gauss 2-3 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of an LP01 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_LP01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_LP01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LP01 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of an LP02 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_LP02_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_LP02.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LP02 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of an LP11 Mode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_LP11_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_LP11.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LP11 Mode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMieSim makes it easy to create a source and a scatterer. With these objects defined, it is possible to use PyMieSim to find the scattering efficiency of the scatterer. This feature can be used to plot a graph of the scattering efficiency of a sphere as a function of the permittivity and the size parameter.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_Qsca_vs_permittivity_vs_size_parameter_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_Qsca_vs_permittivity_vs_size_parameter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scattering efficiency of a sphere</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute far fields, S1/S2 amplitudes and Stokes parameters using arbitrary phi and theta arrays.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_array_scattering_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_array_scattering.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Array-based scattering calculations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMieSim makes it easy to create a source and a scatterer. With these objects defined, it is possible to use PyMieSim to find the scattering efficiency of the scatterer. This feature can be used to plot a graph of the scattering efficiency of a sphere as a function of the permittivity and the size parameter.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_coupling_heatmap_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_coupling_heatmap.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Coupling heatmap of a sphere</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs numerical aperture">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_coupling_vs_NA_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_coupling_vs_NA.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs numerical aperture</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of an Integrating Sphere detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_integrating_sphere_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_integrating_sphere.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Integrating sphere</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the initialization and visualization of a Photodiode detector using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_photodiode_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_photodiode.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Photodiode Detector</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example Script: Using the plot_system Function">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_plot_system_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_plot_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot system</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the computation of scattering properties using PyMieSim.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_properties_cylinder_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_properties_cylinder.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Print properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Samples Properties">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_properties_sphere_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_properties_sphere.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Samples Properties</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/extras/HG01
   /gallery/extras/HG11
   /gallery/extras/LG11
   /gallery/extras/LP01
   /gallery/extras/LP02
   /gallery/extras/LP11
   /gallery/extras/Qsca_vs_permittivity_vs_size_parameter
   /gallery/extras/array_scattering
   /gallery/extras/coupling_heatmap
   /gallery/extras/coupling_vs_NA
   /gallery/extras/integrating_sphere
   /gallery/extras/photodiode
   /gallery/extras/plot_system
   /gallery/extras/properties_cylinder
   /gallery/extras/properties_sphere



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
